Prevent visual jump when filters get fixed.

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -33,6 +33,7 @@
 
       + .awards {
         @include shift(1);
+        margin-top: 2 * $gutter;
       }
     }
   }
